5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1616_2920.log
== TEST (2019-04-01 15:18:39) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:18) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:37) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:05) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:13) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:11) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*13.45)+(b*3.50)+(s*3))
print(round(t,2))
-- OUTPUT:
12052.81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:38) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*13.45)+(b*3.50)+(s*3))
print(round(t,2))
-- OUTPUT:
12052.81
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:59) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*26;90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
File "XXXX", line 4
    t = ((g*26;90)+(b*3.50)+(s*3))
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:07) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- OUTPUT:
24105.63
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:18) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- EXECUTION TIME:
0.189114
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24105.63
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
10468.41
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
6079.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:55) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas:"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:54) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas:"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:25:19) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas:"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- EXECUTION TIME:
0.21553
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2920/main.py", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:37) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas:"))
t = ((g*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:29:31) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas:"))
t = (((g/1000)*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:29:40) 
-- CODE:
g = int(input("quantas gramas:"))
b = int(input("quantas bebidas:"))
s = int(input("quantas sobremesas:"))
t = (((g/1000)*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- EXECUTION TIME:
0.146149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2920/main.py", line 1, in <module>
    g = int(input())
ValueError: invalid literal for int() with base 10: '896.12'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:02) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas:"))
t = (((g/1000)*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:30:13) 
-- CODE:
g = float(input("quantas gramas:"))
b = float(input("quantas bebidas:"))
s = float(input("quantas sobremesas:"))
t = (((g/1000)*26.90)+(b*3.50)+(s*3))
print(round(t,2))
-- EXECUTION TIME:
0.199921
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
